# DickGrowerBot-Telegram

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: __init__.py  config.py  database.py  main.py
app/core/: container.py
app/handlers/: __init__.py  commands.py  inline.py
app/handlers/middlewares/: i18n.py  rate_limit.py
app/locales/: en.yaml  fa.yaml  ru.yaml
app/metrics/: exporter.py
app/models/: __init__.py  achievement.py  admin_settings.py  base.py  chat.py  cooldown.py  daily_event.py  growth_history.py  import_log.py  inventory.py  localization.py  player_stats.py  pvp.py  referral.py  shop.py  user.py
app/repositories/: base.py  chat.py  event.py  import_log.py  pvp.py  stats.py  user.py
app/scheduler/: jobs.py
app/schemas/: __init__.py  pvp.py  user.py
app/services/: event.py  game.py  importer.py  pvp.py
app/utils/: secure.py  text.py  time.py
prometheus/: prometheus.yml
tests/: conftest.py  test_game_service.py  test_import_service.py  test_pvp_service.py
