[project]
name = "dickgrowerbot-telegram"
version = "0.1.0"
description = "A comedic Telegram game bot for friendly growth competition, built with aiogram, PostgreSQL, Redis, and Prometheus."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "aiogram>=3.0.0b7,<4.0",
  "asyncpg>=0.27",
  "SQLAlchemy>=2.0,<3.0",
  "alembic>=1.11",
  "aiohttp>=3.8",
  "pydantic>=2.5,<3.0",
  "redis>=4.5",
  "prometheus_client>=0.16",
  "python-dotenv>=1.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.22",
  "python-multipart>=0.0.6",
  "aiosqlite>=0.20",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
 dev = ["black","ruff","isort"]
